--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "antd": "^5.24.9",
     "axios": "^1.9.0",
     "bootstrap": "^5.3.5",
+    "bootstrap-icons": "^1.11.3",
     "formik": "^2.4.6",
     "jquery": "^3.7.1",
     "moment": "^2.30.1",
