--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "agora-rtc-sdk-ng": "^4.23.3",
     "antd": "^5.24.9",
     "axios": "^1.9.0",
     "bootstrap": "^5.3.5",
@@ -23,9 +24,12 @@
     "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.9",
     "react-chartjs-2": "^5.3.0",
+    "react-datepicker": "^8.3.0",
     "react-dom": "^18.2.0",
     "react-facebook-login": "^4.1.1",
+    "react-icons": "^5.5.0",
     "react-quill": "^2.0.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.5.2",
